[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "vast_mw"
version = "0.1.1"
description = "Multi-wavelength searches for VAST sources"
authors = [
    { name = "David Kaplan", email = "kaplan@uwm.edu" }
]
#readme = false
requires-python = ">=3.7"
dependencies = [
    "astropy",
    "astroquery",
    "loguru",
    "numpy",
    "psrqpy"
]


[project.urls]
# Fill these in if needed
# homepage = ""
# repository = ""
# documentation = ""


[project.scripts]
check_gaia = "vast_mw.scripts.check_gaia:main"
check_pulsarscraper = "vast_mw.scripts.check_pulsarscraper:main"
check_simbad = "vast_mw.scripts.check_simbad:main"
check_atnf = "vast_mw.scripts.check_atnf:main"
check_casda = "vast_mw.scripts.check_casda:main"
check_vla = "vast_mw.scripts.check_vla:main"
check_planets = "vast_mw.scripts.check_planets:main"
check_tgss = "vast_mw.scripts.check_tgss:main"
check_first = "vast_mw.scripts.check_first:main"
check_nvss = "vast_mw.scripts.check_nvss:main"
check_milliquas = "vast_mw.scripts.check_milliquas:main"
check_wiseagn = "vast_mw.scripts.check_wiseagn:main"
check_lqac = "vast_mw.scripts.check_lqac:main"
check_sdssqso = "vast_mw.scripts.check_sdssqso:main"
check_vlass = "vast_mw.scripts.check_vlass:main"
check_all = "vast_mw.scripts.check_all:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["vast_mw", "vast_mw.*"]

